force-app/main/default/objects/RE_JobControls__c/RE_JobControls__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to enable/disable functions in classes</description>
    <label>RE Job Controls</label>
</CustomObject>