force-app/main/default/objects/RE_JobControls__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to enable/disable the functions</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>