force-app/main/default/objects/RE_JobControls__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Stores the name of Apex class</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>