force-app/main/default/objects/RE_JobControls__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Name of the country for which the process is enabled or disabled</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>