force-app/main/default/objects/RE_JobControls__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Method name that will be activated or deactivated</description>
    <label>Method Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>