force-app/main/default/objects/RE_JobControls__c/listViews/Rev_Canada_Job_Control_Settings.listView-meta.xml
<ListView>
    <fullName>Rev_Canada_Job_Control_Settings</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Rev Canada Job Control Settings</label>
    <language>en_US</language>
</ListView>